--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -44,6 +44,11 @@ workflows:
       - name: Build IPA
         script: |
           xcode-project build-ipa --project "$XCODE_PROJECT" --scheme "$XCODE_SCHEME"
+      - name: Debug: List provisioning profiles
+        script: |
+          ls -l /Users/builder/Library/MobileDevice/Provisioning\ Profiles/
+          ls -l /Users/builder/clone/
+          ls -l /Users/builder/clone/*.xcodeproj
 
     artifacts:
       - build/ios/ipa/*.ipa
