--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,82 +1,74 @@
 workflows:
-  swift-ios-app:
-    name: Swift iOS App Workflow
-    environment:
-      vars:
-        XCODE_PROJECT: "Chick Prosperity Bloom.xcodeproj"       # Или укажи .xcworkspace если используешь CocoaPods
-        XCODE_SCHEME: "Chick Prosperity Bloom"                  # Название схемы
-        BUNDLE_ID: "com.prkbloctpehificso.mpyomsyaofclorldrih"
-        APP_STORE_APPLE_ID: 6747517851         # Из App Store Connect > App > General > App Information
-
-      groups:
-        - app_store_credentials                # Должен содержать: APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY
-        - certificate_credentials              # Должен содержать: CERTIFICATE_PRIVATE_KEY
-
-      xcode: 15.0                              # Рекомендуется указать конкретную версию
-      cocoapods: default                       # Или 'none', если не используется
-
-    triggering:
-      events:
-        - push
-        - pull_request
-        - tag
-      branch_patterns:
-        - pattern: 'main'
-          include: true
-          source: true
-
-    scripts:
-      - name: Set up keychain for code signing
-        script: |
-          keychain initialize
-      - name: Fetch signing files
-        script: |
-          app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --platform IOS --create --certificate-key-password='040502'
-      - name: Add certificates
-        script: |
-          keychain add-certificates
-      - name: Apply provisioning profiles
-        script: |
-          xcode-project use-profiles
-      - name: Increment build number
-        script: |
-          agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APPLE_ID") + 1))
-      - name: Build IPA
-        script: |
-          xcode-project build-ipa --project "$XCODE_PROJECT" --scheme "$XCODE_SCHEME"
-      - name: "Debug: List provisioning profiles"
-        script: |
-          echo "Provisioning profiles:"
-          ls -l /Users/builder/Library/MobileDevice/Provisioning\ Profiles/
-          echo "Xcode projects:"
-          find /Users/builder/clone -name "*.xcodeproj"
-          echo "Current directory:"
-          pwd
-          ls -l
-
-    artifacts:
-      - build/ios/ipa/*.ipa
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
-
-    publishing:
-      app_store_connect:
-        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
-        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
-        submit_to_testflight: true
-        # beta_groups:
-        #   - Testers
-
-      email:
-        recipients:
-          - aleshabalash@gmail.com
-        notify:
-          success: true
-          failure: true
-
-      slack:
-        channel: '#builds'
-        notify_on_build_start: true
-        notify:
-          success: true
-          failure: true
+    ios-workflow:
+      name: iOS Workflow1
+      environment:
+        groups:
+        # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
+          - app_store_credentials # <-- (APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY)
+            # APP_STORE_CONNECT_ISSUER_ID <-- Put your App Store Connect Issuer Id here
+            # APP_STORE_CONNECT_KEY_IDENTIFIER <-- Put your App Store Connect Key Identifier here
+            # APP_STORE_CONNECT_PRIVATE_KEY <-- Put your App Store Connect Private Key here
+            # See the following link for more details - https://docs.codemagic.io/code-signing-yaml/signing-ios/
+            # https://appstoreconnect.apple.com/access/api
+          - certificate_credentials # <-- (CERTIFICATE_PRIVATE_KEY - Put your Certificate Private Key here)
+          #- other
+        vars:
+          XCODE_PROJECT: "Chick Prosperity Bloom.xcodeproj" # <-- Put the name of your workspace here.
+          XCODE_SCHEME: "Chick Prosperity Bloom" # <-- Put the name of your scheme here.
+          BUNDLE_ID: "com.prkbloctpehificso.mpyomsyaofclorldrih" # <-- Put your Bundle Id here.
+          APP_STORE_APPLE_ID: 6747517851 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
+        xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
+        cocoapods: default
+      triggering:
+        events:
+          - push
+          - tag
+          - pull_request
+        branch_patterns:
+          - pattern: 'develop'
+            include: true
+            source: true
+      scripts:
+        - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
+          script: |
+            keychain initialize
+        - name: Fetch signing files
+          script: |
+            app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --platform=IOS --create --certificate-key-password='040502'
+        - name: Use system default keychain
+          script: |
+            keychain add-certificates
+        - name: Set up code signing settings on Xcode project
+          script: |
+            xcode-project use-profiles
+        - name: Increment build number
+          script: |
+            # agvtool new-version -all $(($BUILD_NUMBER + 1))
+            agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APPLE_ID") + 1))
+        - name: Build ipa for distribution
+          script: |
+            xcode-project build-ipa --project "$XCODE_PROJECT" --scheme "$XCODE_SCHEME"
+      artifacts:
+        - build/ios/ipa/*.ipa
+        - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+      publishing:
+        app_store_connect:   # https://docs.codemagic.io/publishing-yaml/distribution
+            api_key: $APP_STORE_CONNECT_PRIVATE_KEY         # Contents of the API key, can also reference environment variable such as $APP_STORE_CONNECT_PRIVATE_KEY
+            key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER       # Alphanumeric value that identifies the API key, can also reference environment variable such as $APP_STORE_CONNECT_KEY_IDENTIFIER
+            issuer_id: $APP_STORE_CONNECT_ISSUER_ID         # Alphanumeric value that identifies who created the API key, can also reference environment variable such as $APP_STORE_CONNECT_ISSUER_ID
+            submit_to_testflight: true                     # Optional boolean, defaults to false. Whether or not to submit the uploaded build to TestFlight beta review. Required for distributing to beta groups. Note: This action is performed during post-processing.
+            # beta_groups:                                  # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+            #       - group name 1
+            #       - group name 2
+        email:
+            recipients:
+              - aleshabalash@gmail.com
+            notify:
+              success: true
+              failure: true
+        slack:
+            channel: '#builds'
+            notify_on_build_start: true    # To receive a notification when a build starts
+            notify:
+              success: false               # To not receive a notification when a build succeeds
+              failure: false               # To not receive a notification when a build fails
